Moving the taxonomy links back down again, this time they are right aligned, and give the "add comments" links much more room to breathe.  The dashed border only appears if terms are present.  Fixed the taxonomy module error for taxonomy_get_terms() in node.tpl.php.

--- a/style.css
+++ b/style.css
@@ -335,9 +335,11 @@ ul.links li {
 }
 
 .taxonomy {
-  margin-left:20px;
-  display:inline;
+  padding:2px;
+  border-top: dashed #eee 1px;
+  text-align:right;
 }
+
 .taxonomy ul.links li {
   border:none;
 }
